syntax = "proto3";

option go_package = "./pb";

package pb;

// ------------------------------------ 
// Messages
// ------------------------------------ 

//--------------------------------璇勮淇℃伅--------------------------------
message Comment {
  int64 id = 1; //涓婚敭
  int64 videoId = 2; //瑙嗛id
  int64 userId = 6;
  string content = 3; //璇勮鍐呭
  int64 createTime = 4; //璇ユ潯璁板綍鍒涘缓鏃堕棿
  int64 updateTime = 5; //璇ユ潯鏈€鍚庝竴娆℃洿鏂版椂闂?  int64 isDelete = 6; //閫昏緫鍒犻櫎
}

message AddCommentReq {
  int64 videoId = 1; //视频id
  int64 userId = 2; //用户id
  string content = 3; //评论
  int64 isDelete = 4; //逻辑删除
}

message AddCommentResp {
}

message UpdateCommentReq {
  int64 id = 1; //主键
  int64 videoId = 2; //视频id
  string content = 3; //评论
  int64 isDelete = 4; //逻辑删除
}

message UpdateCommentResp {
}

message DelCommentReq {
  int64 id = 1; //id
  int64 userId = 2; //用户id
  int64 videoId = 3; //视频id
}

message DelCommentResp {
}

message GetCommentByIdReq {
  int64 id = 1; //id
}

message GetCommentByIdResp {
  repeated Comment comment = 1; //comment
}

message SearchCommentReq {
  int64 page = 1; //page
  int64 limit = 2; //limit
  int64 id = 3; //涓婚敭
  int64 videoId = 4; //瑙嗛id
  string content = 5; //璇勮鍐呭
  int64 createTime = 6; //璇ユ潯璁板綍鍒涘缓鏃堕棿
  int64 updateTime = 7; //璇ユ潯鏈€鍚庝竴娆℃洿鏂版椂闂?  int64 isDelete = 8; //閫昏緫鍒犻櫎
}

message SearchCommentResp {
  repeated Comment comment = 1; //comment
}

//--------------------------------鐐硅禐淇℃伅--------------------------------
message Favorite {
  int64 id = 1; //涓婚敭
  int64 videoId = 2; //瑙嗛id
  int64 userId = 3; //瑙嗛id
  int64 createTime = 4; //璇ユ潯璁板綍鍒涘缓鏃堕棿
  int64 updateTime = 5; //璇ユ潯鏈€鍚庝竴娆℃洿鏂版椂闂?  int64 isDelete = 6; //閫昏緫鍒犻櫎
}

message AddFavoriteReq {
  int64 videoId = 1; //瑙嗛id
  int64 userId = 2; //瑙嗛id
  int64 isDelete = 3; //閫昏緫鍒犻櫎
}

message AddFavoriteResp {
}

message UpdateFavoriteReq {
  int64 id = 1; //涓婚敭
  int64 videoId = 2; //瑙嗛id
  int64 userId = 3; //瑙嗛id
  int64 isDelete = 4; //閫昏緫鍒犻櫎
}

message UpdateFavoriteResp {
}

message DelFavoriteReq {
  int64 id = 1; //id
  int64 videoId = 2; //视频id
  int64 userId = 3; //用户id
}

message DelFavoriteResp {
}

message GetFavoriteByIdReq {
  int64 id = 1; //id
}

message GetFavoriteByIdResp {
  Favorite favorite = 1; //favorite
}

message SearchFavoriteReq {
  int64 page = 1; //page
  int64 limit = 2; //limit
  int64 id = 3; //涓婚敭
  int64 videoId = 4; //瑙嗛id
  int64 userId = 5; //瑙嗛id
  int64 createTime = 6; //璇ユ潯璁板綍鍒涘缓鏃堕棿
  int64 updateTime = 7; //璇ユ潯鏈€鍚庝竴娆℃洿鏂版椂闂?  int64 isDelete = 8; //閫昏緫鍒犻櫎
}

message SearchFavoriteResp {
  repeated Favorite favorite = 1; //favorite数组
}

//--------------------------------瑙嗛淇℃伅--------------------------------
message Video {
  int64 id = 1; //涓婚敭
  int64 userId = 2; //瑙嗛浣滆€卛d
  string playUrl = 3; //瑙嗛鎾斁鍦板潃
  string coverUrl = 4; //瑙嗛灏侀潰鍦板潃
  string title = 5; //瑙嗛鏍囬
  int64 createTime = 6; //璇ユ潯璁板綍鍒涘缓鏃堕棿
  int64 updateTime = 7; //璇ユ潯鏈€鍚庝竴娆℃洿鏂版椂闂?  int64 isDelete = 8; //閫昏緫鍒犻櫎
}

message AddVideoReq {
  int64 userId = 1; //瑙嗛浣滆€卛d
  string playUrl = 2; //瑙嗛鎾斁鍦板潃
  string coverUrl = 3; //瑙嗛灏侀潰鍦板潃
  string title = 4; //瑙嗛鏍囬
  int64 isDelete = 5; //閫昏緫鍒犻櫎
}

message AddVideoResp {
}

message UpdateVideoReq {
  int64 id = 1; //涓婚敭
  int64 userId = 2; //瑙嗛浣滆€卛d
  string playUrl = 3; //瑙嗛鎾斁鍦板潃
  string coverUrl = 4; //瑙嗛灏侀潰鍦板潃
  string title = 5; //瑙嗛鏍囬
  int64 isDelete = 6; //閫昏緫鍒犻櫎
}

message UpdateVideoResp {
}

message DelVideoReq {
  int64 id = 1; //id
}

message DelVideoResp {
}

message GetVideoByIdReq {
  int64 id = 1; //id
}

message GetVideoByIdResp {
  Video video = 1; //video
}

message SearchVideoReq {
  int64 page = 1; //page
  int64 limit = 2; //limit
  int64 id = 3; //涓婚敭
  int64 userId = 4; //瑙嗛浣滆€卛d
  string playUrl = 5; //瑙嗛鎾斁鍦板潃
  string coverUrl = 6; //瑙嗛灏侀潰鍦板潃
  string title = 7; //瑙嗛鏍囬
  int64 createTime = 8; //璇ユ潯璁板綍鍒涘缓鏃堕棿
  int64 updateTime = 9; //璇ユ潯鏈€鍚庝竴娆℃洿鏂版椂闂?  int64 isDelete = 10; //閫昏緫鍒犻櫎
}

message SearchVideoResp {
  repeated Video video = 1; //video
}

message GetUserFavoritedCntByIdReq {
  int64 userID = 1; //用户id
}

message GetUserFavoritedCntByIdResp {
  int64 cnt = 1; //用户被喜欢数
}

message GetUserPublishAndLikedCntByIdReq {
  int64 userId = 1;//用户id
}

message GetUserPublishAndLikedCntByIdResp {
  int64 publishCnt = 1; //用户发布作品数
  int64 likedCnt = 2; //用户被喜欢数
}

message GetVideoListByIdListReq{
  repeated int64 videoIdList = 1;//视频id数组
}

message GetVideoListByIdListResp{
  repeated Video videoList = 1; //video数组
}

message FeedUser{
  int64 id = 1; // 用户id
  string name = 2; // 用户名称
  optional int64 follow_count = 3; // 关注总数
  optional int64 follower_count = 4; // 粉丝总数
  bool is_follow = 5; // true-已关注，false-未关注
  optional string avatar = 6; //用户头像
  optional string background_image = 7; //用户个人页顶部大图
  optional string signature = 8; //个人简介
  optional int64 total_favorited = 9; //获赞数量
  optional int64 work_count = 10; //作品数量
  optional int64 favorite_count = 11; //点赞数量
}

message FeedVideo{
  int64 id = 1; // 视频id
  FeedUser author = 2; // 视频作者
  string playUrl = 3; // 视频播放地址
  string coverUrl = 4; // 视频封面地址
  string title = 5; // 视频标题
  int64 favorite_count = 6; // 视频的点赞总数
  int64 comment_count = 7; // 视频的评论总数
  bool is_favorite = 8; // true-已点赞，false-未点赞
  int64 next_time = 9; // 视频创建时间
}

message FeedListReq {
  int64 latest_time = 1;  //最后一条视频的创建时间
  int64 user_id = 2; //用户id
  int64 size = 3; // 拿多少条数据
}

message FeedListResp {
  repeated FeedVideo video_list = 1; //videoList
}



message GetWorkCountByUserIdReq{
  int64 user_id = 1;
}

message GetWorkCountByUserIdResp{
  int64 workCount = 1;
}



message PublishListReq {
  int64 user_id = 1; //用户id
  int64 CheckUserId = 2; // 拿多少条数据
}

message PublishListResp {
  repeated FeedVideo video_list = 1; //videoList
}




// ------------------------------------ 
// Rpc Func
// ------------------------------------ 


service content{

  //-----------------------璇勮淇℃伅-----------------------
  rpc AddComment(AddCommentReq) returns (AddCommentResp);
  rpc UpdateComment(UpdateCommentReq) returns (UpdateCommentResp);
  rpc DelComment(DelCommentReq) returns (DelCommentResp);
  rpc GetCommentById(GetCommentByIdReq) returns (GetCommentByIdResp);
  rpc SearchComment(SearchCommentReq) returns (SearchCommentResp);
  //-----------------------鐐硅禐淇℃伅-----------------------
  rpc AddFavorite(AddFavoriteReq) returns (AddFavoriteResp);
  rpc UpdateFavorite(UpdateFavoriteReq) returns (UpdateFavoriteResp);
  rpc DelFavorite(DelFavoriteReq) returns (DelFavoriteResp);
  rpc GetFavoriteById(GetFavoriteByIdReq) returns (GetFavoriteByIdResp);
  rpc SearchFavorite(SearchFavoriteReq) returns (SearchFavoriteResp);
  //-----------------------瑙嗛淇℃伅-----------------------
  rpc AddVideo(AddVideoReq) returns (AddVideoResp);
  rpc UpdateVideo(UpdateVideoReq) returns (UpdateVideoResp);
  rpc DelVideo(DelVideoReq) returns (DelVideoResp);
  rpc GetVideoById(GetVideoByIdReq) returns (GetVideoByIdResp);
  rpc SearchVideo(SearchVideoReq) returns (SearchVideoResp);


  rpc GetFeedList(FeedListReq) returns (FeedListResp);
  rpc GetPublishList(PublishListReq) returns (PublishListResp);

  rpc GetWorkCountByUserId(GetWorkCountByUserIdReq) returns (GetWorkCountByUserIdResp);

  rpc GetUserFavoritedCnt(GetUserFavoritedCntByIdReq) returns (GetUserFavoritedCntByIdResp);
  rpc GetUserPublishAndLikedCntById (GetUserPublishAndLikedCntByIdReq) returns (GetUserPublishAndLikedCntByIdResp);
  rpc GetVideoListByIdList(GetVideoListByIdListReq) returns (GetVideoListByIdListResp);
}
